fix laji-map modal z-index [fixes #170468362]

--- a/src/styles/laji.scss
+++ b/src/styles/laji.scss
@@ -373,10 +373,10 @@ treenode:last-child > .tree-node > .tree-children::after {
   height: 100%;
 }
 .laji-map-dialog {
-  z-index: 1051;
+  z-index: 1071;
 }
 .laji-map-blocker {
-  z-index: 1050;
+  z-index: 1070;
 }
 /** Laji-Map **/
 
